--- a/final/index.html
+++ b/final/index.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link 
-      rel="stylesheet"
-      href="responsive.css" 
-      media="screen and (max-width: 768px)"
-    />
+    <link rel="stylesheet" href="css/main.css" />
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="print.css" media="print">
@@ -153,5 +149,6 @@
 
     <script src="scripts.js"></script>
     <script src="menu.js"></script>
+  
   </body>
 </html>
